Changed file reader, added Boolean and Location intersection methods, starting setup of client/server, setting up file with 4 route combos for automated testing